<resources>
    <string name="app_name">北大树洞</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test</string>
    <string name="nav_header_subtitle">CCPKU</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    navigation DrawerLayout -->
    <string name="menu_hole">树洞</string>
    <string name="menu_settings">设置</string>

    <!--    view Pager -->
    <string name="search">搜索</string>
    <string name="hole_list">树洞</string>
    <string name="my_attention">关注</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hole_title">北大树洞</string>
    <string name="login">登录</string>
    <string name="hole_detail">树洞详情</string>
    <string name="about_us_title">关于我们</string>

    <!--    hole item card -->
    <string name="pid_format">#%d</string>
    <string name="seconds_before">%d秒前</string>
    <string name="minutes_before">%d分钟前</string>
    <string name="hours_before">%d小时前</string>
    <string name="days_before">%d天前</string>

    <string name="hole_test_text">dz你哈珀等哈我i单位i好的话带哈我很难对付打完后缓冲区打完后曾参加卡号等哈我大货车脑残我打擦完阿达武汉参加完的</string>
    <string name="card_test_post_time">23秒钱</string>
    <string name="card_test_reply_num">0</string>
    <string name="detail_origin_title">原文</string>
    <string name="detail_comment_title">评论</string>
    <string name="dialog_post_title">发布新树洞</string>
    <string name="hole_add_image">添加图像</string>
    <string name="hole_add_audio">添加音频</string>
    <string name="hole_extra_clear">清理</string>
    <string name="hole_post_commmit">发布</string>
    <string name="fab_scrolling_behavior">cn.edu.pku.pkuhole.utilities.ScrollingFabBehavior</string>
    <string name="reply">回复</string>
    <string name="reply_format">回复%s</string>
    <string name="cancelReply">取消</string>
    <string name="hint_reply_text">请输入回复内容</string>
    <string name="star">关注</string>
    <string name="report">举报</string>
    <string name="report_title">举报树洞</string>
    <string name="hint_report_text">请输入举报原因</string>
    <string name="hint_account">学号</string>
    <string name="password">密码</string>

    <!--    settings-->
    <string name="privacy_policy">隐私政策</string>
    <string name="user_agreement">服务协议</string>
    <string name="copyright_info">版权信息</string>
    <string name="about_us">关于我们</string>
    <string name="exit_login">退出登录</string>

    <!--    about us-->
    <string name="app_version">版本</string>
    <string name="app_version_info">北大树洞</string>
    <string name="app_copyright">版权所有</string>
    <string name="copyright_department">北京大学</string>
    <string name="hint_search_text">请输入关键词，多词以空格分隔</string>
    <string name="search_title">搜索结果</string>

    <string name="copyright_info_content">北大树洞 Copyright © 2021-现在，北京大学</string>
    <string name="mmkv_copyright_title">MMKV</string>
    <string name="mmkv_copyright_content">Tencent is pleased to support the open source community by making MMKV available. Copyright © 2018 THL A29 Limited, a Tencent company. All rights reserved. If you have downloaded a copy of the MMKV binary from Tencent, please note that the MMKV binary is licensed under the BSD 3-Clause License. If you have downloaded a copy of the MMKV source code from Tencent, please note that MMKV source code is licensed under the BSD 3-Clause License, except for the third-party components listed below which are subject to different license terms.  Your integration of MMKV into your own projects may require compliance with the BSD 3-Clause License, as well as the other licenses applicable to the third-party components included within MMKV.</string>
    <string name="glide_copyright_title">Glide</string>
    <string name="glide_copyright_content">License for everything not in third_party and not otherwise marked: Copyright 2014 Google, Inc. All rights reserved. Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met: 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer. 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution. THIS SOFTWARE IS PROVIDED BY GOOGLE, INC. ``AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. The views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of Google, Inc. License for third_party/disklrucache: Copyright 2012 Jake Wharton Copyright 2011 The Android Open Source Project Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. License for third_party/gif_decoder: Copyright © 2013 Xcellent Creations, Inc. Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. License for third_party/gif_encoder/AnimatedGifEncoder.java and third_party/gif_encoder/LZWEncoder.java: No copyright asserted on the source code of this class. May be used for any purpose, however, refer to the Unisys LZW patent for restrictions on use of the associated LZWEncoder class. Please forward any corrections to kweiner@fmsware.com. License for third_party/gif_encoder/NeuQuant.java Copyright © 1994 Anthony Dekker NEUQUANT NeuralNet quantization algorithm by Anthony Dekker, 1994. See "Kohonen neural networks for optimal colour quantization" in "Network: Computation in Neural Systems" Vol. 5 (1994) pp 351367. for a discussion of the algorithm. Any party obtaining a copy of these files from the author, directly or indirectly, is granted, free of charge, a full and unrestricted irrevocable, worldwide, paid up, royaltyfree, nonexclusive right and license to deal in this software and documentation files (the "Software"), including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons who receive copies from any such party to do so, with the only requirement being that this copyright notice remain intact.</string>
    <string name="open_source_title">开源库</string>
    <string name="open_source_content">SmartRefreshLayout Material-dialogs Gson PictureSelector PermissionsDispatcher Timber Dagger OkHttp Retrofit</string>

    <!--    launch warn text-->
    <string name="launchWarnText"><![CDATA[本应用尊重并保护所有用户的个人隐私权，为了给您提供更优质的服务，本应用会按照北大树洞服务协议的规定使用您的个人信息。想了解详细信息，请阅读<a href="user_agreement">《北大树洞服务协议》</a>。]]></string>
    <string name="launchWarnTitle">北大树洞服务协议</string>
    <string name="agree">同意</string>
    <string name="reject">不同意</string>
    <string name="hole_splash">Splash</string>
    <string name="menu_score">成绩</string>
    <string name="menu_course">课表</string>
    <string name="hole_practice">树洞规范</string>

    <string name="confirm">确定</string>
    <string name="hiddenDialogToday">今天不再显示</string>
    <string name="input_valid_code">请输入手机验证码</string>
    <string name="verify">验证</string>
    <string name="get_valid_code">获取手机验证码</string>
    <string name="download">下载</string>
    <string name="select_tag">选择标签</string>
    <string name="picture_preview">图片预览</string>
    <string name="hole_top">置顶</string>
    <string name="edit">发布</string>
    <string name="change_text_size">字体大小</string>
    <string name="preview_text_size">预览字体大小</string>
    <string name="format_text_size">%dsp</string>
    <string name="finish">完成</string>
    <string name="version_update">版本更新</string>
    <string name="clear_cache">缓存清理</string>
    <string name="update_title">更新</string>
    <string name="no_update">暂无更新</string>
    <string name="dark_model">深色模式</string>
    <string name="dark_model_text">跟随系统</string>
    <string name="follow_system">跟随系统</string>
    <string name="follow_system_remind">开启后，将跟随系统打开或关闭深色模式</string>
    <string name="hand_select">手动选择</string>
    <string name="normal_mode">普通模式</string>

    <string name="comment_text_format">[%1$s] %2$s</string>
    <string name="quote_comment">引用评论</string>
    <string name="quote_comment_remind">开启后，将展示引用的评论</string>
    <string name="detail_comment_only_lz">只看洞主</string>
    <string name="dialog_valid_code_title">短信验证</string>
    <string name="hint_input_valid_code">请输入手机验证码</string>
    <string name="man_machine_verification">人机认证</string>
    <string name="reLogin">退出登录</string>


</resources>