<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hole"
            android:icon="@drawable/ic_menu_hole"
            android:title="@string/menu_hole" />

        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_menu_score"
            android:title="@string/menu_score"
            />

        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_menu_course"
            android:title="@string/menu_course"
            />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>