<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/copyright_margin"
    tools:context=".ui.settings.CopyrightFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_info"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="@dimen/copyright_margin"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_info_content"
            android:textSize="15sp" />
        <TextView
            android:layout_marginTop="@dimen/copyright_margin"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mmkv_copyright_title"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="@dimen/copyright_margin"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mmkv_copyright_content"
            android:textSize="15sp" />

        <TextView
            android:layout_marginTop="@dimen/copyright_margin"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_copyright_title"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="@dimen/copyright_margin"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_copyright_content"
            android:textSize="15sp" />

        <TextView
            android:layout_marginTop="@dimen/copyright_margin"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_source_title"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="@dimen/copyright_margin"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_source_content"
            android:textSize="15sp" />


    </LinearLayout>


</androidx.core.widget.NestedScrollView>

