<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

<!--            <ImageView-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:layout_marginTop="50dp"-->
<!--                android:layout_weight="1"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:padding="0dp"-->
<!--                android:src="@mipmap/ic_launcher" />-->
<!--            <com.google.android.material.imageview.ShapeableImageView-->
<!--                android:layout_width="120dp"-->
<!--                android:layout_marginTop="0dp"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:adjustViewBounds="false"-->
<!--                android:src="@drawable/pku_hole_logo_transparent" />-->
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                android:adjustViewBounds="false"
                android:layout_gravity="center"
                android:src="@drawable/splash_background"
                app:shapeAppearanceOverlay="@style/RoundedStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="50dp"
                android:background="@color/gray_400" />

            <!--版本-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/app_version"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/fragment_about_us_version_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/app_version_info"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_400" />
            <!--版权所有-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/app_copyright"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/copyright_department"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_400" />
        </LinearLayout>

</LinearLayout>