<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="cn.edu.pku.treehole.viewmodels.settings.ChangeDarkModeViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.ChangeDarkModeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="?attr/colorSecondary">
                <TextView
                    android:id="@+id/follow_system_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_system"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <Switch
                    android:id="@+id/sw_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:track="@drawable/switch_ios_track_selector"
                    android:thumb="@drawable/switch_ios_thumb"
                    android:checked="@{viewModel.currentDarkMode==0? true:false}"
                    android:onCheckedChanged="@{(switch, checked) -> viewModel.onCheckedChanged(checked)}"
                    app:layout_constraintBaseline_toBaselineOf="@id/follow_system_tv"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="5dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:id="@+id/follow_system_remind_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_system_remind"
                    android:textSize="10sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/follow_system_tv"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showSelectList="@{viewModel.currentDarkMode}"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hand_select"
                android:textSize="10sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.clickNormalMode()}"
                android:padding="10dp"
                android:background="?attr/colorSecondary">
            <TextView
                android:id="@+id/normal_mode_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_mode"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:showNormalModeCheckedIcon="@{viewModel.currentDarkMode}"
                    android:src="@drawable/ic_check_24"
                    app:layout_constraintBaseline_toBaselineOf="@id/normal_mode_tv"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.clickDarkMode()}"
                android:padding="10dp"
                android:background="?attr/colorSecondary">
                <TextView
                    android:id="@+id/dark_mode_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_model"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_check_24"
                    app:showDarkModeCheckedIcon="@{viewModel.currentDarkMode}"
                    app:layout_constraintBaseline_toBaselineOf="@id/dark_mode_tv"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>




        </LinearLayout>






        </LinearLayout>


    </FrameLayout>
</layout>