<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="cn.edu.pku.treehole.viewmodels.UserViewModel" />
    </data>


        <RelativeLayout
            android:id="@id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dialog_margin"
            android:layout_marginEnd="@dimen/dialog_margin"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/container_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <RelativeLayout
                    android:id="@+id/container_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_alignParentTop="true">

<!--                    android:onClick="@{()->viewModel.closeDialog()}"-->
                    <ImageButton
                        android:id="@+id/btn_hole_post_send"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:alpha="0.5"

                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_close_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/dialog_valid_code_title"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/input_valid_code_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container_title"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_input_valid_code"
                        android:backgroundTint="@color/gray_500"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:textCursorDrawable="@drawable/bg_edittext"
                        android:hint="@string/hint_input_valid_code" />
<!--                    android:onClick="@{()->viewModel.clickSendValidCode()}"-->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:textSize="11sp"

                        android:background="@drawable/valid_code_button_style"
                        android:textColor="@color/black"
                        android:text="@{viewModel.sendValidCodeBtnText}"
                        tools:text="获取短信验证码"/>

                </LinearLayout>
                <TextView
                    android:id="@+id/input_valid_code_warn_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_valid_code_ll"
                    android:textColor="@color/gray_500"
                    android:layout_marginBottom="10dp"
                    android:textSize="10sp"
                    android:text="请输入您绑定手机接收到的验证码"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_valid_code_warn_tv"
                    android:backgroundTint="@color/red_900"
                    android:textColor="@color/white"
                    android:text="@string/confirm"/>
            </RelativeLayout>

        </RelativeLayout>

</layout>